# QuizBot

./: pyproject.toml
quizbot/: __main__.py  bot.py  components.py  config.py  errors.py  quiz.py
quizbot/cogs/: admin.py  listener.py
quizbot/data/: config.json  questions.json
